--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,21 @@ def projectVersion = "1.0-SNAPSHOT"
 group = projectGroupId
 version = projectVersion
 
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 2, 'seconds'
+    resolutionStrategy.force 'org.springframework:spring-core:3.1.3.RELEASE',
+            'org.springframework:spring-aop:3.1.3.RELEASE',
+            'org.springframework:spring-beans:3.1.3.RELEASE',
+            'org.springframework:spring-context:3.1.3.RELEASE',
+            'org.springframework:spring-expression:3.1.3.RELEASE',
+            'org.springframework:spring-jdbc:3.1.3.RELEASE',
+            'org.springframework:spring-orm:3.1.3.RELEASE',
+            'org.springframework:spring-tx:3.1.3.RELEASE',
+            'org.springframework:spring-web:3.1.3.RELEASE',
+            'org.springframework:spring-webmvc:3.1.3.RELEASE',
+            'org.codehaus.groovy:groovy-all:1.8.6'
+}
+
 def versions = [
         commonsLangCollections: "3.0",
         drools: "5.5.0.Final",
@@ -19,7 +34,7 @@ def versions = [
         groovy: "1.8.6",
         logback: "1.0.9",
         junit: "4.8",
-        spring: "3.2.0.RELEASE",
+        spring: "3.1.3.RELEASE",
 ]
 
 dependencies {
