--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven'
 apply plugin: 'war'
 
 /* Project variables: */
-def projectName = "CepConcepts"
+def projectName = "CEP_skypeBot"
 def projectGroupId = "jary"
 def projectVersion = "1.0-SNAPSHOT"
 
@@ -34,6 +34,7 @@ def versions = [
         groovy: "1.8.6",
         logback: "1.0.9",
         junit: "4.8",
+        skypeApi: "1.5",
         spring: "3.1.3.RELEASE",
 ]
 
@@ -53,6 +54,9 @@ dependencies {
     compile "com.sun.xml.bind:jaxb-xjc:2.2"
     compile "commons-collections:commons-collections:${versions.commonsLangCollections}"
 
+    // skype API
+    compile "com.github.taksan:skype-java-api:${versions.skypeApi}"
+
     // logging
     compile "ch.qos.logback:logback-classic:${versions.logback}"
     compile "ch.qos.logback:logback-core:${versions.logback}"
@@ -67,7 +71,7 @@ dependencies {
 
 }
 test {
-    jvmArgs '-Xms512m', '-Xmx1024m', '-XX:MaxPermSize=256m'
+    jvmArgs '-d32, -Xms512m', '-Xmx1024m', '-XX:MaxPermSize=256m'
 }
 
 repositories {
